deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dp-fb-daap-api-service
spec:
  selector:
    app: dp-fb-daap-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
